--- a/src/scss/global/_form-elements.scss
+++ b/src/scss/global/_form-elements.scss
@@ -352,40 +352,35 @@
   }
 
   &__color-input {
-    // Don't use input-base here since color inputs need specific styling
-    display: block;
-    width: 50px;
-    height: 30px;
-    padding: 2px;
-    border-radius: 4px;
-    cursor: pointer;
-    @include box-shadow-base;
-    border: none;
-    flex: 1;
-    max-width: 250px;
-    margin-left: auto;
+    @include mixins.grid-compliant-color-picker-compact;
+    max-width: 15.625rem; // 250px
+  }
+  
+  &__color-picker-with-hex {
+    @include mixins.grid-compliant-color-picker-with-hex;
     
-    &:hover {
-      @include box-shadow-hover;
+    .color-picker-label {
+      @include mixins.form-label-base;
+      margin-bottom: 0.375rem;
     }
     
-    &:focus {
-      outline: none;
-      @include box-shadow-hover;
+    .color-picker-container {
+      @include mixins.color-picker-container;
     }
     
-    &::-webkit-color-swatch-wrapper {
-      padding: 0;
+    .color-preview {
+      @include mixins.color-picker-preview;
     }
     
-    &::-webkit-color-swatch {
-      border: none;
-      border-radius: 2px;
+    .color-picker {
+      @include mixins.grid-compliant-color-picker;
+      width: 3.125rem;
+      height: 2.5rem;
+      flex: 0 0 3.125rem;
     }
     
-    &::-moz-color-swatch {
-      border: none;
-      border-radius: 2px;
+    .hex-input {
+      @include mixins.color-picker-hex-input;
     }
   }
 
