--- a/templates/item/character-effects.hbs
+++ b/templates/item/character-effects.hbs
@@ -17,15 +17,14 @@
   </label>
 
   <div>
-    <label class="base-form__label" for="iconTint">
-        {{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.IconTint"}}}:
-      </label>
-      <input 
-        class="base-form__color-input" 
-        type="color" 
-        id="iconTint" 
-        name="iconTint" 
-        value="{{iconTint}}">
+    <div class="base-form__color-picker-with-hex color-picker-with-hex">
+      <label class="color-picker-label" for="color-iconTint">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.IconTint"}}}:</label>
+      <div class="color-picker-container">
+        <div class="color-preview" id="preview-iconTint" style="background-color: {{iconTint}}"></div>
+        <input type="color" class="color-picker" id="color-iconTint" name="iconTint" value="{{iconTint}}">
+        <input type="text" class="hex-input" id="hex-iconTint" placeholder="Hex color" value="{{iconTint}}">
+      </div>
+    </div>
   </div>
 
   <div class="eventide-item-sheet__scrollable-container">
