--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -20,6 +20,8 @@
 @use 'components/gear-creator';
 @use 'components/effect-creator';
 @use 'components/sound-settings';
+@use 'components/data-table';
+@use 'components/enhanced-grid';
 
 .eventide-rp-system {
   @include meta.load-css('components/forms');
